Prevent images from stretching
Also increases the image size

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,6 +26,7 @@ body {
     // Hover enlarging should only be applied on desktop-size viewports
     &:hover {
       transform: scale(1.1);
+      z-index: 100;
     }
   }
 
@@ -39,7 +40,9 @@ body {
   }
 
   min-height: 100px;
+  max-height: 400px;
 
+  overflow: hidden;
 
   background: $dev-bgcolor;
   border-radius: 10px;
@@ -52,6 +55,7 @@ body {
   transition: all 0.15s ease-in-out;
 
   a {
+    height: 100%;
     color: inherit;
     text-decoration: inherit;
   }
@@ -61,7 +65,8 @@ body {
   position: absolute;
   font-weight: bold;
   left: 15px;
-  bottom: 5px;
+  bottom: 15px;
+  margin: 0;
 
   padding: 10px;
   border-radius: 10px;
@@ -70,13 +75,13 @@ body {
 
 .photo-image {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #container {
   display: flex;
   flex-wrap: wrap;
-
-  overflow: hidden;
 
   // Property adopted only in 2020/2021 for some browsers
   gap: 10px;
